name:                scylla
version:             0.1.0.0
synopsis:            Scylla CI data types
description:         Data types and JSON encoding/decoding for Scylla
homepage:            https://github.com/ci-realm/data-scylla
license:             BSD3
license-file:        LICENSE
author:              Richard Marko
maintainer:          srk@48.io
copyright:           2018 Richard Marko
category:            Testing
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Scylla.Types
                     , Scylla.Types.API
                     , Scylla.Types.Build
                     , Scylla.Types.Log
                     , Scylla.Types.ShortLog
                     , Scylla.Types.Org
                     , Scylla.Types.Utils
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , containers
                     , data-default
                     , time
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/ci-realm/data-scylla
